Enhance JIT, memory, GraalVM, Valhalla topics with web data
jit/index.md: Added latest JDK 25-26 compiler improvements
memory/index.md: Updated Compact Object Headers JEP 519 details
graalvm/index.md: Updated GraalVM 2025 status, Oracle GraalVM distribution
valhalla/index.md: Fixed minor detail

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>